# tpl-inscription

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/: file-filters.yml
.github/workflows/: build-programs.yml  build-rust-client.yml  deploy-programs.yml  main.yml  publish-rust-client.yml  test-rust-client.yml
clients/cli/: index.ts  package.json  pnpm-lock.yaml  utils.ts
clients/cli/commands/cost/: nft.ts
clients/cli/commands/create/: shards.ts
clients/cli/commands/download/: nft.ts
clients/js/: .eslintrc.js  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/src/: associatedInscription.ts  initialize.ts  initializeFromMint.ts  inscription.ts  plugin.ts
clients/js/test/: _setup.ts  authority.test.ts  clearData.test.ts  getProgram.test.ts  initialize.test.ts  initializeAssocatedInscription.test.ts  initializeFromMint.test.ts  setMint.test.ts  writeData.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/program/: dump.sh
idls/: mpl_inscription_program.json
programs/inscription/: Cargo.toml  README.md
programs/inscription/src/: entrypoint.rs  error.rs  lib.rs  state.rs
programs/inscription/src/instruction/: mod.rs
programs/inscription/src/processor/: add_authority.rs  allocate.rs  clear_data.rs  close.rs  create_shard.rs  initialize.rs  initialize_associated_inscription.rs  initialize_from_mint.rs  mod.rs  remove_authority.rs  set_mint.rs  write_data.rs
(+5 files in other folders)
