[package]
name = "tpl-inscription"
version = "0.8.1"
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"
homepage = "https://www.metaplex.com"
description = "Program to inscribe binary data to a Trezoa account."
repository = "https://github.com/trezoaplex-foundation/tpl-engraver"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with", "kaigan/serde"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
trezoa-program = "~1.16"
thiserror = "^1.0"
kaigan = "^0.2"

[dev-dependencies]
assert_matches = "1.5.0"
trezoa-program-test = "~1.16"
trezoa-sdk = "~1.16"
