[package]
name = "tpl-inscription-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "0.3.0"
num-derive = "^0.3"
num-traits = "^0.2"
trezoa-program = "~1.16"
thiserror = "^1.0"
tpl-utils = "0.3.3"
serde_json = { version = "1.0.108", features = ["std"] }
tpl-token-metadata = "3.2.3"
tpl-token = { version = "4.0.0", features = ["no-entrypoint"] }
tpl-token-2022 = { version = "0.8", features = ["no-entrypoint"] }
